core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@result_type_args.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Expected both type arguments for Result to be a type
In src/ast/snapshots/span_testing/result_type_args.rs:3:39:
...esult<32, i32>) {}...
        ^^^^^^^^^
